# alegemaate.github.io

./: .eslintrc.js  404.html  CNAME  Cargo.toml  README.md  Trunk.toml  a9a7754c-78836f4fe84de7127b46.js  a9a7754c-78836f4fe84de7127b46.js.map  alegemaate-github-io-666dbb15cd9f359d.js  alegemaate-github-io-666dbb15cd9f359d_bg.wasm  app-762689e4996259fd4d4f.js  app-762689e4996259fd4d4f.js.map  cb1608f2-324cc250f0940d8abdf3.js  cb1608f2-324cc250f0940d8abdf3.js.map  chunk-map.json  commons-e90326e3082f82ff6b23.js  commons-e90326e3082f82ff6b23.js.map  component---src-pages-404-tsx-712db8ec319d76f0dc64.js  component---src-pages-404-tsx-712db8ec319d76f0dc64.js.map  component---src-pages-index-tsx-ab0f812f73059b7c4fc1.js  component---src-pages-index-tsx-ab0f812f73059b7c4fc1.js.map  gatsby-config.js  index-8d9b6fc9fbb60ef5.css  index.html  manifest.webmanifest  package-lock.json  package.json  styles.97b8acc7bafadb03f82b.css  tsconfig.json  webpack-runtime-b2fc1d0ce734a3a361fd.js  webpack-runtime-b2fc1d0ce734a3a361fd.js.map  webpack.stats.json
.github/workflows/: codeql-analysis.yml  deploy.yml  nodejs.yml  pr_check.yml
404/: index.html
assets/: 404.html  index.scss
page-data/: app-data.json
page-data/index/: page-data.json
posts/: scanned-synthesis.md
src/: app.rs  lib.rs  route.rs
src/blog/: mod.rs  posts.rs  render.rs
src/components/: about_panel.rs  contactItem.js  container.rs  externalLink.js  external_link.rs  external_links.rs  footer.rs  image.js  layout.css  layout.js  mod.rs  projects_panel.rs
src/icons/: adsgames.rs  mod.rs  (+3 more)
tools/: build-sitemap.sh
(+33 files in other folders)
