[package]
name = "alegemaate-github-io"
version = "0.1.0"
edition = "2024"
description = "Rust personal site"
readme = "README.md"
repository = "https://github.com/alegemaate/alegemaate.github.io"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "Node",
  "NodeList",
] }
